@@ -34,7 +34,7 @@
  *                mode * -p etc. if flag was clear
  *
  *
- * $Id: channel.c,v 1.171 1999/12/23 07:10:53 lusky Exp $
+ * $Id: channel.c,v 1.172 1999/12/28 05:16:30 lusky Exp $
  */
 #include "channel.h"
 #include "client.h"
@@ -3983,142 +3983,6 @@ int     m_invite(struct Client *cptr,
 }
 
 
-/*
-** m_list
-**      parv[0] = sender prefix
-**      parv[1] = channel
-*/
-int     m_list(struct Client *cptr,
-               struct Client *sptr,
-               int parc,
-               char *parv[])
-{
-  struct Channel *chptr;
-  char  *name, *p = NULL;
-  /* anti flooding code,
-   * I did have this in parse.c with a table lookup
-   * but I think this will be less inefficient doing it in each
-   * function that absolutely needs it
-   *
-   * -Dianora
-   */
-  static time_t last_used=0L;
-  int i,j;
-
-  /* throw away non local list requests that do get here -Dianora */
-  if(!MyConnect(sptr))
-    return 0;
-
-  if(!IsAnOper(sptr))
-    {
-      if(((last_used + PACE_WAIT) > CurrentTime) && (!IsDoingList(sptr)))
-        return 0;
-      else
-        last_used = CurrentTime;
-    }
-
-  /* right.. if we are already involved in a "blocked" /list, we will simply
-     continue where we left off */
-  if (IsDoingList(sptr)) {
-    if (sptr->listprogress != -1) {
-      for (i=sptr->listprogress; i<CH_MAX; i++) {
-        int progress2 = sptr->listprogress2;
-        for (j=0, chptr=(struct Channel*)(hash_get_channel_block(i).list);
-             (chptr) && (j<hash_get_channel_block(i).links); chptr=chptr->hnextch, j++) {
-          if (j<progress2) continue;  /* wind up to listprogress2 */
-          if (!sptr->user ||
-              (SecretChannel(chptr) && !IsMember(sptr, chptr)))
-            continue;
-          sendto_one(sptr, form_str(RPL_LIST), me.name, parv[0],
-                     ShowChannel(sptr, chptr)?chptr->chname:"*",
-                     chptr->users,
-                     ShowChannel(sptr, chptr)?chptr->topic:"");
-          if (IsSendqPopped(sptr)) {
-            /* we popped again! : P */
-            sptr->listprogress=i;
-            sptr->listprogress2=j;
-            return 0;
-          }
-        }
-        sptr->listprogress2 = 0;
-      }
-    }
-    sendto_one(sptr, form_str(RPL_LISTEND), me.name, parv[0]);
-    if (IsSendqPopped(sptr)) { /* popped with the RPL_LISTEND code. d0h */
-      sptr->listprogress = -1;
-      return 0;
-    }
-    ClearDoingList(sptr);   /* yupo, its over */
-    return 0;
-    
-  }
-  
-  sendto_one(sptr, form_str(RPL_LISTSTART), me.name, parv[0]);
-
-  if (parc < 2 || BadPtr(parv[1]))
-    {
-      SetDoingList(sptr);     /* only set if its a full list */
-      ClearSendqPop(sptr);    /* just to make sure */
-      /* we'll do this by looking through each hash table bucket */
-      for (i=0; i<CH_MAX; i++) {
-        for (j=0, chptr = (struct Channel*)(hash_get_channel_block(i).list);
-             (chptr) && (j<hash_get_channel_block(i).links); chptr = chptr->hnextch, j++) {
-          if (!sptr->user ||
-              (SecretChannel(chptr) && !IsMember(sptr, chptr)))
-            continue;
-          /* EVIL!  sendto_one doesnt return status of any kind!  Forcing us
-             to make up yet another stupid client flag (we could just
-             negate the DOING_LIST flag, but that might confuse people) -good*/
-          sendto_one(sptr, form_str(RPL_LIST), me.name, parv[0],
-                     ShowChannel(sptr, chptr)?chptr->chname:"*",
-                     chptr->users,
-                     ShowChannel(sptr, chptr)?chptr->topic:"");
-          if (IsSendqPopped(sptr)) {
-            /* GAAH!  We popped our sendq.  Mark our location in the /list */
-            sptr->listprogress=i;
-            sptr->listprogress2=j;
-            return 0;
-          }
-        }
-      
-      }
-
-      sendto_one(sptr, form_str(RPL_LISTEND), me.name, parv[0]);
-      if (IsSendqPopped(sptr)) {
-        sptr->listprogress=-1;
-        return 0;
-      }
-      ClearDoingList(sptr);   /* yupo, its over */
-      return 0;
-    }   
-          
-
-  /* Don't route list, no need for it - Dianora */
-  /*
-    if (hunt_server(cptr, sptr, ":%s LIST %s %s", 2, parc, parv))
-      return 0;
-      */
-
-  p = strchr(parv[1],',');
-  if(p)
-    *p = '\0';
-  name = parv[1]; /* strtoken(&p, parv[1], ","); */
-
-  /* while(name) */
-  if(name)
-    {
-      chptr = hash_find_channel(name, NullChn);
-      if (chptr && ShowChannel(sptr, chptr) && sptr->user)
-        sendto_one(sptr, form_str(RPL_LIST), me.name, parv[0],
-                   ShowChannel(sptr,chptr) ? name : "*",
-                   chptr->users, chptr->topic);
-      /*      name = strtoken(&p, (char *)NULL, ","); */
-    }
-  sendto_one(sptr, form_str(RPL_LISTEND), me.name, parv[0]);
-  return 0;
-}
-
-
 /************************************************************************
  * m_names() - Added by Jto 27 Apr 1989
  ************************************************************************/
@@ -4978,49 +4842,3 @@ int     m_sjoin(struct Client *cptr,
 }
 
 
-
-/*
- * Only called from ircd.c if the clock is discovered to be running forwards
- * The clock can be running forwards for a number of reasons
- * the most likely one, being a reset of the system time.
- * in these cases, its a legit reset of the clock time, but all the channels
- * locally created now have a bogus channel timestamp
- * so, I scan all the current channels, looking for channels I locally
- * created... and reset their creation time...
- * I can only do this =before= I have joined any servers... 
- * Channels that existed =before= this server split from the rest of the net
- * will not have the locally_created flag set, and hence will not be
- * affected. 
- * Remember, the server will not link with a very bogus TS so all that
- * is necessary is to make sure any locally created channel TS's are fixed.
- *
- * -Dianora
- */
-
-void sync_channels(time_t delta)
-{
-  register      struct Channel        *chptr;
-  time_t newts;
-
-  for (chptr = channel; chptr; chptr = chptr->nextch)
-    {
-      if(chptr->locally_created)
-        {
-          newts = chptr->channelts + delta;
-          /*
-           * Leaving this sendto in can cause a lot of "noise"
-           * when it happens, and possibly contribute to the server
-           * lagging worse and worse... finally splitting it...
-           */
-
-          /*
-          sendto_realops("*** resetting TS on locally created %s from %d to %d",
-                         chptr->chname,chptr->channelts,
-                         newts);
-                         */
-
-          chptr->channelts = newts;
-        }
-    }
- 
-}
